that makes it impossible for the code in the smokeruby_mark() function to mark
them as not needing garbage collection when traversing the WMenu/WMenuItem 
heirarchy.
* In Wt, various enums are defined in terms of other enums, for instance 
Wt::WWidget::None is defined as Wt::None. Add the same equivalent names to the 
Wt::Ruby classes.

2009-01-25 Richard Dale <richard.j.dale@gmail.com>
* When an item is marked for not needing garbage collection show the actual
Ruby class in the debug logging
* Fixed some bugs in the widgetgallery dialogwidgets examples
* Added inspect() and pp() methods for Wt::WSubMenuItem and added a 'text'
item to the Wt::WMenuItem inspect method
* More tweaks to the widgetsgallery demo. Disable Ruby garbage collection for
now until problems in coordinating GC with Wt are fixed
* Some improvements to the smokeruby_mark() function and garbage collection
logging
* The url escaping code in the widgetgallery example was wrong

2009-01-24 Richard Dale <richard.j.dale@gmail.com>
* Fixed bugs in the widgetgallery 'Form Validators' option
* The Pie Chart example wasn't calling super in its WContainer constructor and
was causing a seg fault
* Various fixes for the widgetgallery Ext Dialog example, and added a 
'status=()' method to the event displayer
* Added a text value to the WLineEdit inspect() and pp() methods

2009-01-23 Richard Dale <richard.j.dale@gmail.com>
* Added the widgetgallery example, and amended the charts, dragdrop and 
painting examples to work with it.

2009-01-22 Richard Dale <richard.j.dale@gmail.com>
* There was an exception in the virtual method callback code to ignore any
load() methods as they clashed with the Ruby Kernel#load method. However,
Kernel#load is a module method, and a respond_to? test on a Wt::Ruby instance 
won't ever be true. So remove the load() special casing. This makes the code
for DeferredWidgets in the wt-homepage and widgetgallery examples work 
correctly.